--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.15.6",
     "passport": "^0.4.0",
     "passport-spotify": "^1.0.1",
+    "querystring": "^0.2.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
