--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "nodemon": "^1.18.10",
+    "passport": "^0.4.0",
+    "passport-spotify": "^1.0.1",
     "request": "^2.88.0"
   },
   "scripts": {
