--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "mongoose": "^5.4.18",
     "nodemon": "^1.18.10",
     "request": "^2.88.0"
   },
