--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.4.18",
