--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^5.4.18",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "passport-spotify": "^1.0.1",
     "request": "^2.88.0"
   },
