--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-spotify": "^1.0.1",
-    "request": "^2.88.0"
-  },
+    "request": "^2.88.0"  },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
